tests/errors/record_noinfer_err/record_noinfer_err.c
#error record_noinfer_err.record_noinfer_err:8:18 Record type is not inferred. Record type must be known at the point. Hint: Consider add a type ascription.
